Fix:  images overflowing viewport

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -339,7 +339,7 @@ html{
         overflow:      hidden;
         padding:       15px;
         position:      relative;
-        width:         100vw;
+        /*width:         100vw;*/
         }
         .post-link-img{
           background-size: cover;
